added lazy loading to some images

--- a/index.html
+++ b/index.html
@@ -41,28 +41,28 @@
 							</article>
 						</div>
 						<div class="Comment">
-							<img class="Comment__UserProfileImg" src="./images/p2.jpg" alt="profile-img"/>
+							<img class="Comment__UserProfileImg" loading="lazy" src="./images/p2.jpg" alt="profile-img"/>
 							<article class="Comment__UserProfileInfo">
 								<h3 class="Comment__UserProfileInfo__Heading">Lorem ipsum dolor sit amet.</h3>
 								<p class="Comment__UserProfileInfo__Description">Lorem ipsum, dolor sit, amet consectetur adipisicing elit. Dolorum dolor, earum. Sapiente, iure aspernatur laborum.</p>
 							</article>
 						</div>
 						<div class="Comment">
-							<img class="Comment__UserProfileImg" src="./images/p3.jpg" alt="profile-img"/>
+							<img class="Comment__UserProfileImg" loading="lazy" src="./images/p3.jpg" alt="profile-img"/>
 							<article class="Comment__UserProfileInfo">
 								<h3 class="Comment__UserProfileInfo__Heading">Lorem ipsum dolor sit amet.</h3>
 								<p class="Comment__UserProfileInfo__Description">Lorem ipsum, dolor sit, amet consectetur adipisicing elit. Dolorum dolor, earum. Sapiente, iure aspernatur laborum.</p>
 							</article>
 						</div>
 						<div class="Comment">
-							<img class="Comment__UserProfileImg" src="./images/p4.jpg" alt="profile-img"/>
+							<img class="Comment__UserProfileImg" loading="lazy" src="./images/p4.jpg" alt="profile-img"/>
 							<article class="Comment__UserProfileInfo">
 								<h3 class="Comment__UserProfileInfo__Heading">Lorem ipsum dolor sit amet.</h3>
 								<p class="Comment__UserProfileInfo__Description">Lorem ipsum, dolor sit, amet consectetur adipisicing elit. Dolorum dolor, earum. Sapiente, iure aspernatur laborum.</p>
 							</article>
 						</div>
 						<div class="Comment">
-							<img class="Comment__UserProfileImg" src="./images/p5.jpg" alt="profile-img"/>
+							<img class="Comment__UserProfileImg" loading="lazy" src="./images/p5.jpg" alt="profile-img"/>
 							<article class="Comment__UserProfileInfo">
 								<h3 class="Comment__UserProfileInfo__Heading">Lorem ipsum dolor sit amet.</h3>
 								<p class="Comment__UserProfileInfo__Description">Lorem ipsum, dolor sit, amet consectetur adipisicing elit. Dolorum dolor, earum. Sapiente, iure aspernatur laborum.</p>
