--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Le chef</title>
 
 	<link rel="stylesheet" href="./index.css" />
-	<meta name="theme-color" content="var(--bg-color)" />
+	<meta name="theme-color" content="#242D32" />
 	<link href="https://fonts.googleapis.com/css2?family=Courgette&family=Roboto:wght@300;700&display=swap" rel="stylesheet" defer>
 </head>
 <body>
