feature: added recipe and about section templates

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 		<div class="Container Container--Flex Container--VAlign Container--SpaceBetween Container--FullHeight">
 			<a href="#" class="Header__Logo"><em>Le Chef</em></a>
 			<nav class="Navbar">
-				<button type="button" class="Navbar__ContactUsBtn">Contact us</button>
+				<a href="#" class="Navbar__ContactUsBtn">Contact us</a>
 			</nav>
 		</div>
 	</header>
 	<main class="Main">
-		<div class="Container Container--FullHeight Container--Flex Container--SpaceBetween">
+		<section class="Container Container--FullHeight Container--Flex Container--SpaceBetween">
 			<article class="Introduction">
 				<h2 class="Introduction__Subheading">Le Chef's Noodles</h2>
 				<h1 class="Introduction__Heading">The best noodles with choice toppings</h1>
 				<p class="Introduction__Description">
-					Lorem ipsum, dolor sit, amet consectetur adipisicing elit. Repellat explicabo culpa numquam repellendus sit nulla
+					Peace will come to the world when the people have enough noodles to eat. Feast your taste buds with our amazing dishes.
 				</p>
 				<button type="button" class="Introduction__BrowseDishesBtn">Browse Dishes</button>
 				<div class="Comments">
@@ -36,36 +36,44 @@
 						<div class="Comment">
 							<img class="Comment__UserProfileImg" src="./images/p1.jpg" alt="profile-img"/>
 							<article class="Comment__UserProfileInfo">
-								<h3 class="Comment__UserProfileInfo__Heading">Lorem ipsum dolor sit amet.</h3>
-								<p class="Comment__UserProfileInfo__Description">Lorem ipsum, dolor sit, amet consectetur adipisicing elit. Dolorum dolor, earum. Sapiente, iure aspernatur laborum.</p>
+								<h3 class="Comment__UserProfileInfo__Heading">Nora Lanes</h3>
+								<p class="Comment__UserProfileInfo__Description">
+									peace will come indeed. I enjoyed every bit of the noodles
+								</p>
 							</article>
 						</div>
 						<div class="Comment">
 							<img class="Comment__UserProfileImg" loading="lazy" src="./images/p2.jpg" alt="profile-img"/>
 							<article class="Comment__UserProfileInfo">
-								<h3 class="Comment__UserProfileInfo__Heading">Lorem ipsum dolor sit amet.</h3>
-								<p class="Comment__UserProfileInfo__Description">Lorem ipsum, dolor sit, amet consectetur adipisicing elit. Dolorum dolor, earum. Sapiente, iure aspernatur laborum.</p>
+								<h3 class="Comment__UserProfileInfo__Heading">Vivian</h3>
+								<p class="Comment__UserProfileInfo__Description">
+									As a cook, I must say you guys are doing a GREAT job
+								</p>
 							</article>
 						</div>
 						<div class="Comment">
 							<img class="Comment__UserProfileImg" loading="lazy" src="./images/p3.jpg" alt="profile-img"/>
 							<article class="Comment__UserProfileInfo">
-								<h3 class="Comment__UserProfileInfo__Heading">Lorem ipsum dolor sit amet.</h3>
-								<p class="Comment__UserProfileInfo__Description">Lorem ipsum, dolor sit, amet consectetur adipisicing elit. Dolorum dolor, earum. Sapiente, iure aspernatur laborum.</p>
+								<h3 class="Comment__UserProfileInfo__Heading">Angela</h3>
+								<p class="Comment__UserProfileInfo__Description">can you add sunday deliveries. I can't get enough of it on Sundays. lol</p>
 							</article>
 						</div>
 						<div class="Comment">
 							<img class="Comment__UserProfileImg" loading="lazy" src="./images/p4.jpg" alt="profile-img"/>
 							<article class="Comment__UserProfileInfo">
-								<h3 class="Comment__UserProfileInfo__Heading">Lorem ipsum dolor sit amet.</h3>
-								<p class="Comment__UserProfileInfo__Description">Lorem ipsum, dolor sit, amet consectetur adipisicing elit. Dolorum dolor, earum. Sapiente, iure aspernatur laborum.</p>
+								<h3 class="Comment__UserProfileInfo__Heading">Hakim</h3>
+								<p class="Comment__UserProfileInfo__Description">
+									I really liked it. Are there larger packages? 
+								</p>
 							</article>
 						</div>
 						<div class="Comment">
 							<img class="Comment__UserProfileImg" loading="lazy" src="./images/p5.jpg" alt="profile-img"/>
 							<article class="Comment__UserProfileInfo">
-								<h3 class="Comment__UserProfileInfo__Heading">Lorem ipsum dolor sit amet.</h3>
-								<p class="Comment__UserProfileInfo__Description">Lorem ipsum, dolor sit, amet consectetur adipisicing elit. Dolorum dolor, earum. Sapiente, iure aspernatur laborum.</p>
+								<h3 class="Comment__UserProfileInfo__Heading">Hilda</h3>
+								<p class="Comment__UserProfileInfo__Description">
+									Do you deliver cook on large scale for events like wedding?
+								</p>
 							</article>
 						</div>
 					</div>
@@ -74,7 +82,39 @@
 			<div class="Dish">
 				<img class="Dish__Img" src="./images/banner-dish.png"></img>
 			</div>
-		</div>
+		</section>
+		<section class="BestRecipes">
+			<h2 class="BestRecipes__Heading">Our Best Recipes</h2>
+			<div class="Container BestRecipes__Recipes">
+				<article class="BestRecipes__Recipe">
+					<img class="BestRecipes__RecipeImg" src="" alt="noodle recipe"/>
+					<h3>Lorem ipsum dolor sit amet consectetu</h3>
+				</article>
+				<article class="BestRecipes__Recipe">
+					<img class="BestRecipes__RecipeImg" src="" alt="noodle recipe"/>
+					<h3 class="BestRecipes__RecipeName">Lorem ipsum dolor sit adipisicing</h3>
+				</article>
+				<article class="BestRecipes__Recipe">
+					<img class="BestRecipes__RecipeImg" src="" alt="noodle recipe"/>
+					<h3 class="BestRecipes__RecipeName">Lorem ipsum consectetur adipisicing</h3>
+				</article>
+			</div>
+		</section>
+		<section class="About">
+			<div class="Container About__Content">
+				<figure class="About__Content__ImgBox">
+					<img src="./images/p2.jpg" alt="chef cooking" />
+					<figcaption>Mrs Lee Stanleyson</figcaption>
+				</figure>
+				<article class="About__Content__Info">
+					<h2>How&nbsp;<a href="#" class="OrganizationName">Le Chef</a>&nbsp;started</h2>
+					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius aliquam commodi ipsum porro perferendis. Possimus impedit accusamus officiis iure ducimus voluptates expedita veritatis assumenda consequuntur harum cum vero inventore dicta quisquam reprehenderit nobis in blanditiis quod, excepturi. Molestiae eligendi, excepturi?</p>
+					<p>Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Culpa non ut maiores, animi numquam ex illo cum sapiente possimus consequatur.</p>
+					<p>Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Culpa non ut maiores, animi numquam ex illo cum sapiente possimus consequatur.</p>
+					<p>Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Culpa non ut maiores, animi numquam ex illo cum sapiente possimus consequatur.</p>
+				</article>
+			</div>
+		</section>
 	</main>
 
 	<script>
